--- a/timetable.html
+++ b/timetable.html
@@ -3,17 +3,18 @@ layout: default
 title:  "タイムテーブル"
 copy: "- Beyond the distance(距離を超えて) -"
 ---
+
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-md-6 offset-md-3 col-12">
-            <h1>タイムテーブル</h1>
-        </div>
+  <div class="row">
+    <div class="col-md-6 offset-md-3 col-12">
+      <h1>タイムテーブル</h1>
     </div>
-    
-    <div class="row">
-        <div class="col-12 p-3" id="timetable">
-            <img src="/img/timetable.png" style="max-width:100%">
-            <a href="/img/timetable.pdf"  class="button" target="_blank" rel="noopener">タイムテーブルをPDFで開く</a>
-        </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-12 p-3" id="timetable">
+      <img src="/img/timetable.png" style="max-width:100%" alt='タイムテーブル画像'>
+      <a href="/img/timetable.pdf"  class="button" target="_blank" rel="noopener">タイムテーブルをPDFで開く</a>
     </div>
+  </div>
 </div>
