Remove needless page.copy variables

--- a/timetable.html
+++ b/timetable.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-title:  "タイムテーブル"
-copy: "- Beyond the distance(距離を超えて) -"
+title:  タイムテーブル
 ---
 
 <div class="container mt-5">
