Refactor: workshop -> workshops.yml

--- a/workshop.html
+++ b/workshop.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "ワークショップ"
+title:  ワークショップ
 thumbnail: workshop.png
 ---
 
@@ -13,7 +13,7 @@ thumbnail: workshop.png
   </div>
 
   <div class="row text-left">
-    {% for data in site.data.workshop %}
+    {% for data in site.data.workshops %}
     <div class="col-md-6 col-12 p-3">
       <h4 class="ws-title">{{data.title}}</h4>
       <p>
