Add blank sessions.md page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ layout: default
 
 
 
-<section id="contactus" class="bg-main">
+<section id="contact" class="bg-main">
   <div class="section-contents">
     <h2 class="text-white">CONTACT</h2>
     <p class="caption text-white">気になる点などあればお気軽にご連絡ください。</p>
