ダウンロードリンクの初期値を修正

--- a/thumbnail-maker.html
+++ b/thumbnail-maker.html
@@ -17,8 +17,8 @@ layout: default
         </div>
     </div>
     <div class="links">
-        <a id="img-download-btn" class="btn inline-block" href="#">画像をダウンロード</a>
-        <a id="img-show-btn" class="inline-block" href="#">ダウンロードできない場合はこちら</a>
+        <a id="img-download-btn" class="btn inline-block" href="">画像をダウンロード</a>
+        <a id="img-show-btn" class="inline-block" href="https://dcj2021-thumbnail-maker.ymsg.space/?text=">ダウンロードできない場合はこちら</a>
     </div>
 </div>
 
