Translate 404 page and quick link to report to GitHub

--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>ページが見つかりませんでした 🥹</strong></p>
+  <p>リンク切れであれば <a href='https://github.com/coderdojo-japan/dojocon2021.coderdojo.jp/issues/new'>GitHub</a> でご報告いただけると嬉しいです 🙏</p>
 </div>
