Decoarete 404 page not found page

--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1 style='margin-top: 130px;'>Page Not Found</h1>
 
-  <p><strong>ページが見つかりませんでした 🥹</strong></p>
-  <p>リンク切れであれば <a href='https://github.com/coderdojo-japan/dojocon2021.coderdojo.jp/issues/new'>GitHub</a> でご報告いただけると嬉しいです 🙏</p>
+  <p><strong>お探しのページが見つかりませんでした 🥹</strong></p>
+  <p  style='margin-bottom: 100px;'>リンク切れであれば <a href='https://github.com/coderdojo-japan/dojocon2021.coderdojo.jp/issues/new'>GitHub</a> でご報告いただけると嬉しいです 🙏</p>
 </div>
