--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-62337761-8');
-</script> </head> <body> <div style="text-align: center;font-size: 3em;font-family: 'Space Mono';"> <div style="margin-top: 3em">DojoCon Japan 2023</div> <div style="margin-top: 1em" class="cursor">"Be Cool" will be soo</div> </div> </body> </html>
+</script> </head> <body> <div style="text-align: center;font-size: 4vw;font-family: 'Space Mono';"> <div style="margin-top: 3em">DojoCon Japan 2023</div> <div style="margin-top: 1em" class="cursor">"Be Cool" will be soo</div> </div> </body> </html>
