deploy: a0f710744e733fd664ec83c564b8afd124347cbb

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-62337761-8');
-</script> </head> <body> <div style="text-align: center;font-size: 4vw;font-family: 'Space Mono';"> <div style="margin-top: 3em">DojoCon Japan 2023</div> <div style="margin-top: 1em" class="cursor">"Be Cool" will be soo</div> </div> </body> </html>
+</script> </head> <body> <div style="text-align: center;font-size: 4vw;font-family: 'Space Mono';"> <div style="margin-top: 2em">DojoCon Japan 2023</div> <div style="margin-top: 0em">"Be Cool"</div> <div style="margin-top: 0.5em">2023年8月27日（日）開催決定</div> <div style="margin-top: 0.5em" class="cursor">SAVE THE DATE</div> </div> </body> </html>
