IDの位置変更

--- a/_posts/2023-07-24-sponsor.html
+++ b/_posts/2023-07-24-sponsor.html
@@ -15,8 +15,9 @@ id: sponsors
       <h3>Gold Sponsor</h3>
       <ul>
         {% for sponsor in site.data.sponsor.gold %}
-          <li id="{{ sponsor.id }}">
-            <a href="{{ sponsor.link }}" target="_blank">
+          <br id="{{ sponsor.id }}">
+          <li>
+            <a href="{{ sponsor.link }}" target="_blank" id="{{ sponsor.id }}">
               <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
             </a>
             <p class="name">{{ sponsor.name }}</p>
@@ -32,8 +33,8 @@ id: sponsors
       <h3>Sliver Sponsor</h3>
       <ul>
         {% for sponsor in site.data.sponsor.silver %}
-          <li id="{{ sponsor.id }}">
-            <a href="{{ sponsor.link }}" target="_blank" id="{{ sponsor.id }}" class="sponsors-rank” {">
+          <li>
+            <a href="{{ sponsor.link }}" target="_blank" id="{{ sponsor.id }}">
               <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
             </a>
             <p class="name">{{ sponsor.name }}</p>
@@ -49,8 +50,9 @@ id: sponsors
       <h3>Bronze Sponsor</h3>
       <ul>
         {% for sponsor in site.data.sponsor.bronze %}
-          <li id="{{ sponsor.id }}">
-            <a href="{{ sponsor.link }}" target="_blank">
+          <br id="{{ sponsor.id }}">
+          <li>
+            <a href="{{ sponsor.link }}" target="_blank" id="{{ sponsor.id }}">
               <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
             </a>
             <p class="name">{{ sponsor.name }}</p>
