404 Not Found になった場合、報告先への導線を分かりやすくした

--- a/404.html
+++ b/404.html
@@ -17,9 +17,12 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="container" style='margin-bottom: 200px;'>
   <h1 style='margin-top: 130px;'>Page Not Found</h1>
 
   <p><strong>お探しのページが見つかりませんでした 🥹</strong></p>
-  <p  style='margin-bottom: 100px;'>リンク切れであれば Twitter の <a href='https://twitter.com/DojoConJapan'>@DojoConJapan</a> アカウントへご報告いただけると嬉しいです 🙏</p>
+  <p  style='margin-bottom: 100px;'>リンク切れなどあれば <a href='https://twitter.com/DojoConJapan'>@DojoConJapan</a> アカウントまで<br class='ignore-sp'>ご報告いただけると嬉しいです 🙏</p>
+
+  <h2 style='margin-bottom: 30px;'><a href='https://twitter.com/DojoConJapan'>最近の投稿を見る</a></h2>
+  <a class="twitter-timeline" data-lang="ja" data-height="600" href="https://twitter.com/DojoConJapan?ref_src=twsrc%5Etfw">Tweets by DojoConJapan</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
