deploy: f74c973a0c7b489c625bd28efa6715cc9a4ca2ec

--- a/expo/22.html
+++ b/expo/22.html
@@ -39,6 +39,7 @@
    }
   }
   /* scratch wrapper */
+  /*今回スクラッチを埋め込まないためコメントアウト
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
       position: absolute;
@@ -55,6 +56,7 @@
       margin: 10px 20px;
     }
   }
+  */
 </style> <div id="page-top"><a href="#top"><img src="/img/svg/up.svg" alt="Up" width="24px"/></a></div> <footer> <nav class="share"> <a href="https://www.facebook.com/share.php?u=https://dojocon2023.coderdojo.jp" target="_blank" class="share-facebook text-white" rel="noopener"><i class="fab fa-facebook-square"></i> Facebook でシェア</a> <a href="https://twitter.com/share?url=https://dojocon2023.coderdojo.jp/expo/22&text=DojoCon Japan - SC Wars & zss79.jp&hashtags=DojoConJapan,coderdojo&via=&related=" target="_blank" class="share-twitter text-white" rel="noopener"><i class="fab fa-twitter-square"></i> Twitter でシェア</a> <a href="https://social-plugins.line.me/lineit/share?url=https://dojocon2023.coderdojo.jp/expo/22" class="share-line text-white"><i class="fab fa-line"></i> LINE でシェア</a> </nav> <nav class="footer-menu"> <ul class="footer-menu-list"> <li><a href="/code-of-conduct">行動規範</a></li> <li><a href="/privacy">プライバシー・ポリシー</a></li> <li><a href="https://www.facebook.com/DojoConJapan" target="_blank" rel="noopener">Facebook</a></li> <li><a href="https://twitter.com/DojoConJapan" target="_blank" rel="noopener">Twitter</a></li> </ul> </nav> <p class="copyright">&copy; DojoCon Japan 2023 実行委員会</p> </footer> <script>
       window.onload = function() {
         var agent = window.navigator.userAgent.toLowerCase();
