--- a/404.html
+++ b/404.html
@@ -23,6 +23,11 @@ layout: default
   <p><strong>お探しのページが見つかりませんでした 🥹</strong></p>
   <p  style='margin-bottom: 100px;'>リンク切れなどあれば <a href='https://twitter.com/DojoConJapan'>@DojoConJapan</a> アカウントまで<br class='ignore-sp'>ご報告いただけると嬉しいです 🙏</p>
 
-  <h2 style='margin-bottom: 30px;'><a href='https://twitter.com/DojoConJapan'>最近の投稿を見る</a></h2>
+  <h2 style='margin-bottom: 30px;'>
+    <i class="fab fa-twitter"></i>
+    <a href='https://twitter.com/DojoConJapan'>
+      最近の投稿を見る
+    </a>
+  </h2>
   <a class="twitter-timeline" data-lang="ja" data-height="600" href="https://twitter.com/DojoConJapan?ref_src=twsrc%5Etfw">Tweets by DojoConJapan</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
