Refactor: ダックタイピング可能なようにブレているカラム名を統一

--- a/_posts/2023-07-27-sponsor.html
+++ b/_posts/2023-07-27-sponsor.html
@@ -27,7 +27,7 @@ permalink: /posts/sponsors/
             <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
           </a>
           <p class="name">{{ sponsor.name }}</p>
-          <p class="msg">{{ sponsor.msg }}</p>
+          <p class="message">{{ sponsor.message }}</p>
         </li>
         {% endfor %}
       </ul>
@@ -44,7 +44,7 @@ permalink: /posts/sponsors/
               <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
             </a>
             <p class="name">{{ sponsor.name }}</p>
-            <p class="msg">{{ sponsor.msg }}</p>
+            <p class="message">{{ sponsor.message }}</p>
           </li>
           {% endfor %}
         </ul>
@@ -61,7 +61,7 @@ permalink: /posts/sponsors/
               <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
             </a>
             <p class="name">{{ sponsor.name }}</p>
-            <p class="msg">{{ sponsor.msg }}</p>
+            <p class="message">{{ sponsor.message }}</p>
           </li>
           {% endfor %}
         </ul>
@@ -78,7 +78,7 @@ permalink: /posts/sponsors/
               <img src="/img/{{ site.year }}/sponsor/{{ sponsor.logo }}" alt="{{ sponsor.name }}" />
             </a>
             <p class="name">{{ sponsor.name }}</p>
-            <p class="msg">{{ sponsor.msg }}</p>
+            <p class="message">{{ sponsor.message }}</p>
             </li>
           {% endfor %}
         </ul>
